Maverick Synergy 3.0.0 - TBC

Features
    o Major refactor to support more shared code with the Maverick Legacy APIs.
    o Removed all dependencies from core maverick-synergy-client and maverick-synergy-server modules to enable clearer choice on third-party dependencies.

Bug Fixes
    o Selector threads and executor service threads have now been marked as daemon threads.
        
=================
=  HISTORY      =
=================

Maverick NG 2.0.5 - Jun 20, 2019

Bug Fixes
    o Ensure selector key is cancelled when forwarding socket error occurs.
    
-----------------

Maverick NG 2.0.4 - Mar 14, 2019

Features
    o Removed SLF4J dependency in favor of internal logging interface with support for console, file and connection based logging.
    o Added support for curve25519-sha256@libssh.org, rsa1024-sha1 and rsa2048-sha256 key exchanges.
    o Added key exchange unit tests.
    
Bug Fixes
    o Consume error when performing pending operations on selector to ensure other operations do not fail.
    o Changed default message sent to remote when a disconnection occurs because of an error.
    o changePositionofAlgorithm throws IndexOutOfBoundsException when presented with an algorithm that is not in the list*
    o Enabling BouncyCastle JCE does not configure separate Diffie Hellman algorithms causing alternative provider to be selected*
    o KnownHostsKeyVerification implementation fails on invalid entry.
    o Improvements to socket forwarding
    
-----------------

Maverick NG 2.0.3 - Jan 23, 2019

Features
    o Support for ECDSA, RSA and DSA keys in new OpenSSH private key file format. Keys generated by the API will now default to this format when written.
    o Support for BubbleBabble type fingerprint in SshKeyUtils and SshKeyFingerprint.
    o Refactor of NIO selector to defer reading/writing to a separate executor task. 
    
Bug Fixes
    o ExecutorOperationSupport included twice in separate jar files causing runtime conflict.